add comment delete request in admin
